test/typecheck/pass/inc_prelude.sail
default Order inc

$include <prelude.sail>
