test/typecheck/fail/prelude_no_order.sail
$option -dno_error_filenames
$include <prelude.sail>
